--- a/pair.html
+++ b/pair.html
@@ -1,158 +1,285 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>B.M.B-TECH PAIR</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DML-MD Pairing Code</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
-    /* (====== CSS yako ile ile nimeiacha bila kubadilisha ======) */
-    * {box-sizing: border-box;margin: 0;padding: 0;}
+    :root {
+      --gradient: linear-gradient(135deg, #00d4ff, #7e00ff);
+      --bg: #050010;
+      --glass: rgba(255, 255, 255, 0.05);
+      --text: #ffffff;
+      --muted: #bbbbbb;
+      --highlight: #00f6ff;
+      --radius: 18px;
+      --blur: 15px;
+      --glow: 0 0 18px rgba(0, 246, 255, 0.4);
+      --transition: all 0.35s ease;
+    }
+
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
-      background: linear-gradient(135deg, #0f0f0f, #1a1a1a, #000000);
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Segoe UI', sans-serif;
       min-height: 100vh;
-      color: white;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      padding: 20px;
-      position: relative;
+      justify-content: flex-start;
+      padding: 100px 20px;
+      background: var(--bg);
+      color: var(--text);
       overflow-x: hidden;
     }
-    .background-effects {position: fixed;top: 0; left: 0; width: 100%; height: 100%;z-index: -1;pointer-events: none;}
-    .shape {position: absolute;background: rgba(0, 255, 153, 0.05);border: 1px solid rgba(0, 255, 153, 0.1);animation: roam 25s infinite ease-in-out;will-change: transform;}
-    .square { width: 60px; height: 60px; }
-    .circle { width: 50px; height: 50px; border-radius: 50%; }
-    .triangle {width: 0; height: 0;border-left: 30px solid transparent;border-right: 30px solid transparent;border-bottom: 50px solid rgba(0,255,153,0.05);}
-    .shape:nth-child(1) { top: 10%; left: 5%; animation-duration: 20s; }
-    .shape:nth-child(2) { top: 50%; left: 20%; animation-duration: 25s; }
-    .shape:nth-child(3) { top: 30%; left: 60%; animation-duration: 22s; }
-    .shape:nth-child(4) { top: 70%; left: 40%; animation-duration: 28s; }
-    @keyframes roam {0% { transform: translate(0, 0) rotate(0deg); }25% { transform: translate(30vw, 20vh) rotate(90deg); }50% { transform: translate(-25vw, -25vh) rotate(180deg); }75% { transform: translate(20vw, 30vh) rotate(270deg); }100% { transform: translate(0, 0) rotate(360deg); }}
-    .star {position: absolute;background: radial-gradient(circle, rgba(255, 255, 255, 0.8) 10%, rgba(0, 255, 153, 0.2) 50%, transparent 70%);border-radius: 50%;animation: twinkle 4s infinite ease-in-out;will-change: opacity, transform;}
-    .star:nth-child(5) { top: 15%; left: 25%; width: 3px; height: 3px; animation-delay: 0s; }
-    .star:nth-child(6) { top: 55%; left: 45%; width: 2px; height: 2px; animation-delay: 1s; }
-    .star:nth-child(7) { top: 75%; left: 65%; width: 4px; height: 4px; animation-delay: 0.5s; }
-    .star:nth-child(8) { top: 25%; left: 85%; width: 2px; height: 2px; animation-delay: 2s; }
-    @keyframes twinkle {0% { opacity: 0.4; transform: scale(0.8); }50% { opacity: 1; transform: scale(1.1); }100% { opacity: 0.4; transform: scale(0.8); }}
-    .container {background: #111;padding: 40px 30px 30px 30px;border-radius: 20px;box-shadow: 0 0 30px rgba(0,255,0,0.15), inset 0 0 10px rgba(0,255,0,0.05);border: 1.5px solid #00ff9d;width: 100%;max-width: 400px;text-align: center;position: relative;z-index: 1;animation: fadeIn 1s ease forwards;}
-    h1 {font-weight: 900;font-size: 2.5rem;color: #00ff9d;margin-bottom: 25px;letter-spacing: 3px;text-shadow: 0 0 10px #00ff9d;}
-    h3 {color: #00ff9d;font-size: 1.5rem;margin-bottom: 5px;}
-    h6 {font-weight: 400;color: #ccc;font-size: 1rem;margin-bottom: 25px;}
-    .input-container {display: flex;flex-direction: column;gap: 18px;margin-bottom: 15px;}
-    input {background: #1d1d1d;border: none;border-radius: 12px;padding: 14px 20px;font-size: 1.1rem;color: white;box-shadow: inset 2px 2px 10px #000, inset -2px -2px 8px #1a1a1a;outline: none;transition: box-shadow 0.3s ease;}
-    input:focus {box-shadow: 0 0 10px #00ff9d;}
-    button {background: #00ff9d;border: none;border-radius: 12px;padding: 15px;font-size: 1.2rem;font-weight: 700;color: black;cursor: pointer;transition: background-color 0.3s ease, transform 0.2s ease;opacity: 1;visibility: visible;box-shadow: 0 0 12px #00ff9d;}
-    button:hover {background-color: #00cc7a;transform: scale(1.05);}
-    #pair {margin-top: 25px;font-size: 1.2rem;font-weight: 700;color: #00ff9d;text-shadow: 0 0 10px #00ff9d;user-select: text;min-height: 32px;word-break: break-word;transition: color 0.3s ease;}
-    #copyButton {margin-top: 15px;background: #121212;border: 1.5px dashed #00ff9d;border-radius: 12px;padding: 10px 20px;color: #00ff9d;font-weight: 700;cursor: pointer;box-shadow: 0 0 8px #00ff9d;transition: background-color 0.3s ease;display: none;user-select: none;}
-    #copyButton:hover {background-color: #252525;}
-    .powered-by {margin-top: 30px;color: #00ff9d;font-weight: 600;font-size: 0.95rem;opacity: 0.7;letter-spacing: 1px;cursor: default;user-select: none;text-shadow: 0 0 5px rgba(0, 255, 153, 0.4);transition: opacity 0.3s ease;}
-    .powered-by:hover {opacity: 1;}
-    #loading-spinner {display: none;justify-content: center;margin-top: 15px;}
-    .loader {display: flex;gap: 6px;}
-    .loader div {width: 12px;height: 12px;background-color: #00ff9d;border-radius: 50%;animation: bounce 0.6s infinite alternate;}
-    .loader div:nth-child(2) {animation-delay: 0.2s;}
-    .loader div:nth-child(3) {animation-delay: 0.4s;}
-    @keyframes bounce {to {opacity: 0.3;transform: translateY(-10px);}}
-    @keyframes fadeIn {from { opacity: 0; transform: translateY(20px);}to { opacity: 1; transform: translateY(0);}}
-    @media (max-width: 480px) {.container {padding: 30px 20px 25px 20px;}h1 {font-size: 2rem;}button {font-size: 1rem;}}
+
+    /* Background animation */
+    body::before {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background: radial-gradient(circle at 20% 30%, rgba(0,255,255,0.15), transparent 40%),
+                  radial-gradient(circle at 80% 70%, rgba(140,0,255,0.2), transparent 40%);
+      animation: pulse 10s infinite alternate;
+      z-index: -1;
+    }
+    @keyframes pulse {
+      from { transform: scale(1); }
+      to   { transform: scale(1.1); }
+    }
+
+    /* Header */
+    .header {
+      position: fixed;
+      top: 0; left: 0; right: 0;
+      display: flex; justify-content: space-between; align-items: center;
+      padding: 0.8rem 1.5rem;
+      background: var(--glass);
+      backdrop-filter: blur(var(--blur));
+      border-bottom: 1px solid rgba(255,255,255,0.1);
+      z-index: 100;
+    }
+    .logo-container { display: flex; align-items: center; gap: 0.8rem; }
+    .logo-img {
+      height: 42px; width: 42px; border-radius: 50%;
+      border: 2px solid rgba(0,246,255,0.4);
+      box-shadow: var(--glow);
+    }
+    .logo-text {
+      font-size: 1.4rem; font-weight: 700;
+      background: var(--gradient);
+      -webkit-background-clip: text; -webkit-text-fill-color: transparent;
+    }
+
+    /* Battery */
+    .battery-container {
+      display: flex; align-items: center; gap: 0.5rem;
+      padding: 0.4rem 1rem; border-radius: 50px;
+      background: rgba(0,0,0,0.3); font-size: 0.9rem;
+      border: 1px solid rgba(255,255,255,0.1);
+    }
+    .battery-icon { color: var(--highlight); }
+
+    /* Card */
+    .card {
+      background: var(--glass);
+      backdrop-filter: blur(var(--blur));
+      border-radius: var(--radius);
+      padding: 2rem;
+      text-align: center;
+      margin-top: 2rem;
+      width: 100%; max-width: 480px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+      border: 1px solid rgba(255,255,255,0.08);
+      transition: var(--transition);
+    }
+    .card:hover { transform: translateY(-5px); box-shadow: var(--glow); }
+
+    .card h2 {
+      font-size: 1.8rem; margin-bottom: 0.8rem;
+      background: var(--gradient);
+      -webkit-background-clip: text; -webkit-text-fill-color: transparent;
+    }
+    .card h5 { color: var(--muted); font-weight: normal; margin-bottom: 1rem; }
+
+    /* Input */
+    .input-container {
+      display: flex; gap: 0.6rem; margin-top: 1rem; flex-wrap: wrap;
+    }
+    .input-container input {
+      flex: 1; padding: 0.9rem;
+      border-radius: var(--radius);
+      border: 1px solid rgba(255,255,255,0.15);
+      background: rgba(0,0,0,0.4);
+      color: var(--text); font-size: 1rem;
+    }
+    .input-container button {
+      padding: 0.9rem 1.5rem;
+      border-radius: var(--radius);
+      border: none; background: var(--gradient);
+      color: white; font-weight: 600; cursor: pointer;
+      transition: var(--transition);
+    }
+    .input-container button:hover { transform: scale(1.05); }
+
+    /* Pairing result */
+    #pair-result {
+      margin-top: 1rem;
+      padding: 1rem;
+      border-radius: var(--radius);
+      background: rgba(0,0,0,0.4);
+      min-height: 55px; display: flex; align-items: center; justify-content: center;
+      font-size: 1.1rem;
+    }
+    #copy-code {
+      display: none; margin-top: 1rem;
+      border: 1px solid var(--highlight);
+      padding: 0.6rem 1.2rem;
+      border-radius: 50px;
+      background: transparent; color: var(--highlight);
+      font-weight: 600; cursor: pointer;
+      transition: var(--transition);
+    }
+    #copy-code:hover { background: rgba(0,246,255,0.15); }
+
+    /* Music Player */
+    .music-player {
+      margin-top: 2rem;
+      padding: 1.5rem;
+      border-radius: var(--radius);
+      background: var(--glass);
+      backdrop-filter: blur(var(--blur));
+      border: 1px solid rgba(255,255,255,0.1);
+      text-align: center;
+    }
+    .music-title { font-size: 1.2rem; font-weight: bold; margin: 0.3rem 0; }
+    .music-subtitle { color: var(--muted); font-size: 0.9rem; }
+
+    .play-btn {
+      margin: 1rem auto;
+      width: 55px; height: 55px;
+      border-radius: 50%; border: none;
+      background: var(--gradient);
+      display: flex; align-items: center; justify-content: center;
+      cursor: pointer; transition: var(--transition);
+    }
+    .play-btn i { color: #fff; font-size: 1.5rem; }
+    .play-btn:hover { transform: scale(1.1); }
+
+    .time-display { font-size: 0.9rem; color: var(--muted); margin-top: 0.5rem; }
+
+    /* Responsive */
+    @media(max-width:600px) {
+      .input-container { flex-direction: column; }
+      .input-container button { width: 100%; }
+    }
   </style>
 </head>
 <body>
-  <div class="background-effects" aria-hidden="true">
-    <div class="shape square"></div><div class="shape circle"></div><div class="shape triangle"></div><div class="shape square"></div>
-    <div class="star"></div><div class="star"></div><div class="star"></div><div class="star"></div>
-  </div>
+  <!-- Header -->
+  <header class="header">
+    <div class="logo-container">
+      <img src="https://files.catbox.moe/vcdwmp.jpg" class="logo-img">
+      <div class="logo-text">DML-MD</div>
+    </div>
+    <div class="battery-container">
+      <i class="fas fa-battery-full battery-icon" id="battery-icon"></i>
+      <span id="battery-level">--%</span>
+    </div>
+  </header>
 
-  <main class="container" role="main">
-    <h1>B.M.B-TECH PAIR</h1>
-    <h3>Link with Phone Number</h3>
-    <h6>Enter your number with country code</h6>
+  <!-- Pairing Code Card -->
+  <div class="card">
+    <h2>PAIRING CODE</h2>
+    <h5>Best WhatsApp Bot made by DML</h5>
+    <p>Enter your number with country code:</p>
 
-    <form id="pairForm" class="input-container" novalidate>
-      <input
-        id="phoneInput"
-        type="tel"
-        placeholder="+2557678"
-        aria-label="Phone number input"
-        required
-        pattern="^\+?\d{7,15}$"
-        title="Enter phone number with country code, e.g., +2557678 or 2557678"
-      />
-      <button type="submit" id="submitBtn">Get Pairing Code</button>
-    </form>
-
-    <div id="loading-spinner">
-      <div class="loader"><div></div><div></div><div></div></div>
+    <div class="input-container">
+      <input type="number" id="number" placeholder="2557********" required>
+      <button id="submit">SUBMIT</button>
     </div>
 
-    <div id="pair"></div>
-    <button id="copyButton">Copy Pairing Code</button>
-  </main>
+    <div id="pair-result"><p id="waiting-message" style="display:none;">Please wait...</p></div>
+    <button id="copy-code" onclick="copyCode()">COPY CODE</button>
+  </div>
 
-  <div class="powered-by">Powered By Bmb Tech</div>
+  <!-- Music Player -->
+  <div class="music-player">
+    <div class="music-title">DML-MD</div>
+    <div class="music-subtitle">Vibes</div>
+    <button class="play-btn" onclick="togglePlay()">
+      <i class="fas fa-pause" id="play-icon"></i>
+    </button>
+    <div class="time-display" id="time1">0:00</div>
+    <div class="music-subtitle">Now Playing: Faded</div>
+    <audio id="audio1" src="https://files.catbox.moe/6nbv82.mp3" loop></audio>
+  </div>
 
-  <script>
-    const form = document.getElementById('pairForm');
-    const phoneInput = document.getElementById('phoneInput');
-    const pairDiv = document.getElementById('pair');
-    const copyBtn = document.getElementById('copyButton');
-    const loadingSpinner = document.getElementById('loading-spinner');
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"></script>
+<script>
+  const pairResult = document.getElementById("pair-result");
+  const submitBtn = document.getElementById("submit");
+  const numberInput = document.getElementById("number");
+  const copyCodeBtn = document.getElementById("copy-code");
+  const waitingMessage = document.getElementById("waiting-message");
 
-    form.addEventListener('submit', async e => {
-      e.preventDefault();
-      let phone = phoneInput.value.trim();
+  // Copy code
+  async function copyCode() {
+    const code = pairResult.innerText.replace('CODE: ', '');
+    try {
+      await navigator.clipboard.writeText(code);
+      copyCodeBtn.innerText = "COPIED!";
+      setTimeout(()=> copyCodeBtn.innerText="COPY CODE",1500);
+    } catch(err){ console.error(err); }
+  }
 
-      // Normalize: ensure it starts with +
-      if (!phone.startsWith('+')) {
-        phone = '+' + phone.replace(/^0+/, ''); // pia toa 0 mwanzoni
-      }
+  // Submit handler
+  submitBtn.addEventListener("click", async (e)=>{
+    e.preventDefault();
+    if(!numberInput.value){ pairResult.innerHTML='<p style="color:var(--highlight)">Enter your WhatsApp number</p>'; return;}
+    const cleanNumber = numberInput.value.replace(/[^0-9]/g,"");
+    if(cleanNumber.length<11){ pairResult.innerHTML='<p style="color:#ff5555">Invalid Number</p>'; return;}
+    waitingMessage.style.display="block"; pairResult.innerHTML=""; copyCodeBtn.style.display="none";
 
-      if (!phone.match(/^\+\d{7,15}$/)) {
-        pairDiv.textContent = 'Please enter a valid phone number with country code.';
-        copyBtn.style.display = 'none';
-        return;
-      }
+    try{
+      const {data}=await axios(`/code?number=${cleanNumber}`);
+      const code=data.code||"Unavailable";
+      pairResult.innerHTML=`<p style="color:var(--highlight);font-weight:bold;">CODE: <span style="color:white">${code}</span></p>`;
+      copyCodeBtn.style.display="inline-block"; waitingMessage.style.display="none";
+    }catch{ pairResult.innerHTML='<p style="color:#ff5555">Error getting code</p>'; waitingMessage.style.display="none"; }
+  });
 
-      loadingSpinner.style.display = 'flex';
-      pairDiv.textContent = '';
-      copyBtn.style.display = 'none';
+  // Music Player
+  const audio=document.getElementById('audio1');
+  const playIcon=document.getElementById('play-icon');
+  const timeDisplay=document.getElementById('time1');
 
-      try {
-        const response = await fetch(`/code?number=${encodeURIComponent(phone.replace(/\D/g, ''))}`);
-        if (!response.ok) throw new Error('Network response was not ok');
+  document.addEventListener('click',function initAudio(){
+    audio.play().catch(()=>{});
+    document.removeEventListener('click',initAudio);
+  },{once:true});
 
-        const data = await response.json();
-        const pairingCode = data.code || 'Service Unavailable';
+  function togglePlay(){
+    if(audio.paused){audio.play(); playIcon.className="fas fa-pause";}
+    else{audio.pause(); playIcon.className="fas fa-play";}
+  }
+  audio.addEventListener('timeupdate',()=>{
+    const m=Math.floor(audio.currentTime/60), s=Math.floor(audio.currentTime%60);
+    timeDisplay.textContent=`${m}:${s.toString().padStart(2,'0')}`;
+  });
 
-        loadingSpinner.style.display = 'none';
-        pairDiv.textContent = pairingCode;
-        if (pairingCode !== 'Service Unavailable') {
-          copyBtn.style.display = 'inline-block';
-        } else {
-          copyBtn.style.display = 'none';
-        }
-      } catch (error) {
-        loadingSpinner.style.display = 'none';
-        pairDiv.textContent = 'Error fetching pairing code. Please try again later.';
-        copyBtn.style.display = 'none';
-        console.error('Fetch error:', error);
-      }
-    });
-
-    copyBtn.addEventListener('click', () => {
-      if (pairDiv.textContent) {
-        navigator.clipboard.writeText(pairDiv.textContent)
-          .then(() => {
-            const originalText = pairDiv.textContent;
-            pairDiv.textContent = originalText + "  ✔️ Done Copy";
-            setTimeout(() => { pairDiv.textContent = originalText; }, 2000);
-          })
-          .catch(() => { console.error('Failed to copy pairing code.'); });
-      }
-    });
-  </script>
+  // Battery
+  const batteryLevel=document.getElementById("battery-level"), batteryIcon=document.getElementById("battery-icon");
+  if(navigator.getBattery){ navigator.getBattery().then(b=>{
+    function updateUI(){
+      const pct=Math.round(b.level*100); batteryLevel.textContent=`${pct}%`;
+      let icon='fa-battery-quarter';
+      if(pct>80) icon='fa-battery-full'; else if(pct>60) icon='fa-battery-three-quarters';
+      else if(pct>40) icon='fa-battery-half';
+      batteryIcon.className=`fas ${icon}`; batteryIcon.style.color=b.charging?'#00ff00':'var(--highlight)';
+    }
+    updateUI(); b.addEventListener('levelchange',updateUI); b.addEventListener('chargingchange',updateUI);
+  });}
+</script>
 </body>
 </html>
