--- a/main.html
+++ b/main.html
@@ -125,7 +125,7 @@
       width: calc(100% + 4px);
       height: calc(100% + 4px);
       border-radius: 10px;
-      background: linear-gradient(45deg, var(--neon-green), #15ff00, #000000, var(--neon-red));
+      background: linear-gradient(45deg, var(--blue-green), #98FB98, #32CD32, var(--neon-red));
       background-size: 400%;
       z-index: -1;
       animation: steam 10s linear infinite;
