--- a/main.html
+++ b/main.html
@@ -230,7 +230,7 @@
     <h3>DML-MD SESSION PORTAL</h3>
     
     <div class="button-container">
-      <a href="/index" class="button" target="_blank">
+      <a href="/qr" class="button" target="_blank">
         <span class="status-indicator"></span>
         <span>QR-CODE</span>
       </a>
