--- a/qr.html
+++ b/qr.html
@@ -1,178 +1,119 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1737874207490861"
-            crossorigin="anonymous"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DML-MD QR SCANNER</title>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&amp;display=swap" rel="stylesheet">
-    <title>QR</title>
-    <style>
-        .bg {
-            width: 100%;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-size: 400% 400%;
-            animation: AnimateBG 25s ease infinite;
-        }
-
-        @keyframes AnimateBG {
-            0% {
-                background-position: 0% 50%
-            }
-
-            50% {
-                background-position: 100% 50%
-            }
-
-            100% {
-                background-position: 0% 50%
-            }
-        }
-
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: "Outfit";
-            background: linear-gradient(-45deg, #4a90e2, #3ac569, #9b59b6, #e74c3c);
-            background-size: 400% 400%;
-            animation: gradient 10s ease infinite;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        @keyframes gradient {
-            0% {
-                background-position: 0% 50%;
-            }
-
-            50% {
-                background-position: 100% 50%;
-            }
-
-            100% {
-                background-position: 0% 50%;
-            }
-        }
-
-        jsl.code {
-            overflow: hidden;
-            background: linear-gradient(-45deg, #f1c40f, #3498db, #2ecc71, #e74c3c);
-            background-size: 400% 400%;
-            animation: gradient 8s ease infinite;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            font-family: 'Montserrat', sans-serif;
-            height: 110vh;
-            margin: 0px;
-
-        }
-
-        p.legend {
-            color: #fff;
-            font-size: 1em;
-            font-weight: 400;
-            padding: 0em 1.1em;
-            margin-top: 0.1em;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            overflow: hidden;
-        }
-
-        :root {
-            --main-color: hsl(212, 45%, 89%);
-            --principalText-color: hsl(218, 44%, 22%);
-            --secondText-color: hsl(220, 15%, 55%);
-        }
-
-        #content {
-            display: flex;
-            flex-direction: column;
-            width: 22rem;
-            text-align: center;
-            background-color: #000000;
-            padding: 1rem;
-            border-radius: 14px;
-        }
-
-        #QR-content img {
-            border-radius: 10px;
-            width: 20rem;
-        }
-
-        #title-container {
-            padding: 1rem 1rem 0 1rem;
-            color: #fff;
-            font-weight: 700;
-            margin-bottom: 1rem;
-        }
-
-        #description-container {
-            padding: 0 2.5rem 0 2.5rem;
-            color: #fff;
-            margin-bottom: 2rem;
-        }
-
-        #p-legend {
-            font-size: 1em;
-            font-weight: 400;
-            padding: 0em 1.1em;
-            margin-top: 0.1em;
-        }
-
-        .reload-button {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #3498db; /* Blue color */
-            color: #fff; /* White text color */
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        .reload-button:hover {
-            background-color: #2980b9; /* Darker blue color on hover */
-        }
-    </style>
-    <script>
-        var timeleft = 30;
-        var downloadTimer = setInterval(function () {
-            if (timeleft <= 0) {
-                clearInterval(downloadTimer);
-                document.getElementById("progressBar").remove();
-                document.getElementById("main").innerHTML = "QR Expired! Please reload";
-                document.getElementById("legend").innerHTML = ""
-            }
-            document.getElementById("progressBar").value = 30 - timeleft;
-            timeleft -= 1;
-        }, 1000);
-    </script>
+  <meta charset="UTF-8">
+  <title>DML-TECH QR Code</title>
+  <style>
+    * {
+      box-sizing: border-box;
+      font-family: "Poppins", sans-serif;
+    }
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: linear-gradient(120deg, #3b82f6, #06b6d4);
+    }
+    .qr-box {
+      background: #fff;
+      border-radius: 18px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.15);
+      padding: 30px 40px;
+      text-align: center;
+      width: 340px;
+      transition: transform .2s ease;
+    }
+    .qr-box:hover {
+      transform: translateY(-5px);
+    }
+    h2 {
+      color: #2563eb;
+      margin-bottom: 20px;
+    }
+    img {
+      width: 230px;
+      height: 230px;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    .refresh-btn {
+      background: #2563eb;
+      color: white;
+      border: none;
+      padding: 12px 20px;
+      border-radius: 10px;
+      font-size: 15px;
+      cursor: pointer;
+      margin-top: 20px;
+      transition: 0.3s;
+    }
+    .refresh-btn:hover {
+      background: #1d4ed8;
+      transform: scale(1.05);
+    }
+    .loading {
+      margin-top: 20px;
+      font-size: 14px;
+      color: #555;
+    }
+    .timer {
+      font-size: 14px;
+      color: #888;
+      margin-top: 10px;
+    }
+  </style>
 </head>
 <body>
-<div class="bg">
-    <div id="content">
-        <div id="QR-content">
-            <img id="qr-image" src="/server" alt="QR CODE">
-        </div>
-        <div id="title-container">
-            <h2 id="main">DML-TECH QR</h2>
-            <p class="legend" id="legend">Scan The QR Code</p>
-        </div>
-        <div id="description-container">
-            <p id="semi" class="legend"></p>
-            <progress value="0" max="30" id="progressBar"></progress>
-        </div>
-        <a href="javascript:history.go(0)" class="reload-button">Reload Page</a>
-    </div>
-</div>
+  <div class="qr-box">
+    <h2>📲 Scan to Connect</h2>
+    <img id="qrImage" src="" alt="QR Code">
+    <div class="timer" id="timerText">QR expires in 25s</div>
+    <button class="refresh-btn" id="refreshBtn">🔄 Refresh QR</button>
+    <div class="loading" id="loading">Fetching QR Code...</div>
+  </div>
+
+  <script>
+    const qrImage = document.getElementById("qrImage");
+    const refreshBtn = document.getElementById("refreshBtn");
+    const loading = document.getElementById("loading");
+    const timerText = document.getElementById("timerText");
+    let countdown = 25;
+    let timer;
+
+    async function loadQR() {
+      loading.style.display = "block";
+      qrImage.style.opacity = 0.4;
+      try {
+        const response = await fetch("/");
+        const blob = await response.blob();
+        qrImage.src = URL.createObjectURL(blob);
+        loading.style.display = "none";
+        qrImage.style.opacity = 1;
+        resetTimer();
+      } catch (e) {
+        loading.innerText = "⚠️ Failed to load QR. Try refreshing.";
+      }
+    }
+
+    function resetTimer() {
+      countdown = 25;
+      clearInterval(timer);
+      timer = setInterval(() => {
+        countdown--;
+        timerText.innerText = `QR expires in ${countdown}s`;
+        if (countdown <= 0) {
+          clearInterval(timer);
+          loadQR();
+        }
+      }, 1000);
+    }
+
+    refreshBtn.addEventListener("click", () => loadQR());
+
+    // Load first QR
+    loadQR();
+  </script>
 </body>
 </html>
