--- a/qr.html
+++ b/qr.html
@@ -1,178 +1,230 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1737874207490861"
-            crossorigin="anonymous"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DML-MD QR SCANNER</title>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&amp;display=swap" rel="stylesheet">
-    <title>QR</title>
-    <style>
-        .bg {
-            width: 100%;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-size: 400% 400%;
-            animation: AnimateBG 25s ease infinite;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DML-XMD QR SCANNER</title>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 
-        @keyframes AnimateBG {
-            0% {
-                background-position: 0% 50%
-            }
+  <!-- QR SCANNER LIBRARY -->
+  <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
 
-            50% {
-                background-position: 100% 50%
-            }
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-            100% {
-                background-position: 0% 50%
-            }
-        }
+    body {
+      font-family: "Outfit", sans-serif;
+      background: linear-gradient(-45deg, #4a90e2, #3ac569, #9b59b6, #e74c3c);
+      background-size: 400% 400%;
+      animation: gradient 10s ease infinite;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+      overflow: hidden;
+    }
 
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: "Outfit";
-            background: linear-gradient(-45deg, #4a90e2, #3ac569, #9b59b6, #e74c3c);
-            background-size: 400% 400%;
-            animation: gradient 10s ease infinite;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+    @keyframes gradient {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
 
-        @keyframes gradient {
-            0% {
-                background-position: 0% 50%;
-            }
+    #content {
+      background-color: rgba(0, 0, 0, 0.85);
+      border-radius: 16px;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+      width: 90%;
+      max-width: 400px;
+      text-align: center;
+      padding: 1.5rem;
+      position: relative;
+    }
 
-            50% {
-                background-position: 100% 50%;
-            }
+    #QR-content img {
+      width: 100%;
+      border-radius: 12px;
+      margin-bottom: 1rem;
+    }
 
-            100% {
-                background-position: 0% 50%;
-            }
-        }
+    #main {
+      font-size: 1.3rem;
+      font-weight: 700;
+      margin-bottom: 0.5rem;
+    }
 
-        jsl.code {
-            overflow: hidden;
-            background: linear-gradient(-45deg, #f1c40f, #3498db, #2ecc71, #e74c3c);
-            background-size: 400% 400%;
-            animation: gradient 8s ease infinite;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            font-family: 'Montserrat', sans-serif;
-            height: 110vh;
-            margin: 0px;
+    .legend {
+      font-size: 1em;
+      font-weight: 400;
+      margin-bottom: 0.5rem;
+    }
 
-        }
+    progress {
+      width: 100%;
+      height: 10px;
+      border-radius: 10px;
+      margin-top: 10px;
+    }
 
-        p.legend {
-            color: #fff;
-            font-size: 1em;
-            font-weight: 400;
-            padding: 0em 1.1em;
-            margin-top: 0.1em;
-        }
+    progress::-webkit-progress-bar {
+      background-color: #444;
+      border-radius: 10px;
+    }
 
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            overflow: hidden;
-        }
+    progress::-webkit-progress-value {
+      background-color: #3ac569;
+      border-radius: 10px;
+    }
 
-        :root {
-            --main-color: hsl(212, 45%, 89%);
-            --principalText-color: hsl(218, 44%, 22%);
-            --secondText-color: hsl(220, 15%, 55%);
-        }
+    .reload-button {
+      margin-top: 1rem;
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: #3498db;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: 600;
+      transition: background-color 0.3s ease;
+    }
 
-        #content {
-            display: flex;
-            flex-direction: column;
-            width: 22rem;
-            text-align: center;
-            background-color: #000000;
-            padding: 1rem;
-            border-radius: 14px;
-        }
+    .reload-button:hover {
+      background-color: #2980b9;
+    }
 
-        #QR-content img {
-            border-radius: 10px;
-            width: 20rem;
-        }
+    /* Scanner Box */
+    #reader {
+      width: 100%;
+      border: 2px solid #3ac569;
+      border-radius: 10px;
+      margin-top: 1rem;
+      overflow: hidden;
+    }
 
-        #title-container {
-            padding: 1rem 1rem 0 1rem;
-            color: #fff;
-            font-weight: 700;
-            margin-bottom: 1rem;
-        }
+    #result {
+      margin-top: 1rem;
+      font-weight: 500;
+      font-size: 0.95rem;
+      color: #fff;
+      word-wrap: break-word;
+    }
 
-        #description-container {
-            padding: 0 2.5rem 0 2.5rem;
-            color: #fff;
-            margin-bottom: 2rem;
-        }
+    /* Popup Notification */
+    #popup {
+      position: absolute;
+      top: 10%;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: #2ecc71;
+      color: #fff;
+      padding: 12px 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+      display: none;
+      font-weight: 600;
+      animation: fadeInOut 3s ease forwards;
+      z-index: 10;
+    }
 
-        #p-legend {
-            font-size: 1em;
-            font-weight: 400;
-            padding: 0em 1.1em;
-            margin-top: 0.1em;
-        }
-
-        .reload-button {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #3498db; /* Blue color */
-            color: #fff; /* White text color */
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        .reload-button:hover {
-            background-color: #2980b9; /* Darker blue color on hover */
-        }
-    </style>
-    <script>
-        var timeleft = 30;
-        var downloadTimer = setInterval(function () {
-            if (timeleft <= 0) {
-                clearInterval(downloadTimer);
-                document.getElementById("progressBar").remove();
-                document.getElementById("main").innerHTML = "QR Expired! Please reload";
-                document.getElementById("legend").innerHTML = ""
-            }
-            document.getElementById("progressBar").value = 30 - timeleft;
-            timeleft -= 1;
-        }, 1000);
-    </script>
+    @keyframes fadeInOut {
+      0% { opacity: 0; transform: translate(-50%, -20px); }
+      10% { opacity: 1; transform: translate(-50%, 0); }
+      90% { opacity: 1; transform: translate(-50%, 0); }
+      100% { opacity: 0; transform: translate(-50%, -20px); }
+    }
+  </style>
 </head>
+
 <body>
-<div class="bg">
-    <div id="content">
-        <div id="QR-content">
-            <img id="qr-image" src="/server" alt="QR CODE">
-        </div>
-        <div id="title-container">
-            <h2 id="main">DML-TECH QR</h2>
-            <p class="legend" id="legend">Scan The QR Code</p>
-        </div>
-        <div id="description-container">
-            <p id="semi" class="legend"></p>
-            <progress value="0" max="30" id="progressBar"></progress>
-        </div>
-        <a href="javascript:history.go(0)" class="reload-button">Reload Page</a>
+  <div id="content">
+    <!-- Popup Message -->
+    <div id="popup">✅ QR Scanned Successfully!</div>
+
+    <!-- Static QR Image -->
+    <div id="QR-content">
+      <img id="qr-image" src="/server" alt="QR CODE">
     </div>
-</div>
+
+    <!-- Title Section -->
+    <div id="title-container">
+      <h2 id="main">DML-XMD QR SCANNER</h2>
+      <p class="legend" id="legend">Scan The QR Code Below</p>
+    </div>
+
+    <!-- Progress Section -->
+    <progress value="0" max="30" id="progressBar"></progress>
+    <p id="timer" class="legend"></p>
+
+    <!-- Live Scanner -->
+    <div id="reader"></div>
+    <p id="result">Result will appear here...</p>
+
+    <!-- Reload Button -->
+    <a href="javascript:history.go(0)" class="reload-button">Reload Page</a>
+  </div>
+
+  <script>
+    // Countdown Timer
+    let timeleft = 30;
+    const progressBar = document.getElementById("progressBar");
+    const mainText = document.getElementById("main");
+    const legend = document.getElementById("legend");
+    const timer = document.getElementById("timer");
+
+    const downloadTimer = setInterval(() => {
+      if (timeleft <= 0) {
+        clearInterval(downloadTimer);
+        progressBar.remove();
+        mainText.textContent = "QR Expired! Please reload";
+        legend.textContent = "";
+        timer.textContent = "";
+      } else {
+        progressBar.value = 30 - timeleft;
+        timer.textContent = `Expires in ${timeleft}s`;
+        timeleft -= 1;
+      }
+    }, 1000);
+
+    // Popup Function
+    function showPopup() {
+      const popup = document.getElementById("popup");
+      popup.style.display = "block";
+      setTimeout(() => {
+        popup.style.display = "none";
+      }, 3000);
+    }
+
+    // QR Scanner
+    function onScanSuccess(decodedText) {
+      const resultDiv = document.getElementById("result");
+      resultDiv.innerHTML = `✅ <strong>Scanned:</strong> ${decodedText}`;
+      
+      showPopup(); // show popup success
+
+      // Auto open link if it's a URL
+      if (decodedText.startsWith("http://") || decodedText.startsWith("https://")) {
+        setTimeout(() => {
+          window.open(decodedText, "_blank");
+        }, 1000);
+      }
+    }
+
+    function onScanError(errorMessage) {
+      // silent errors
+    }
+
+    const html5QrCode = new Html5Qrcode("reader");
+    html5QrCode.start(
+      { facingMode: "environment" },
+      { fps: 10, qrbox: { width: 250, height: 250 } },
+      onScanSuccess,
+      onScanError
+    );
+  </script>
 </body>
 </html>
