--- a/qr.html
+++ b/qr.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QuickScan Pro | Advanced QR Code Reader</title>
+    <title>DML-XMD PRO | Advanced QR Code Reader</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -430,7 +430,7 @@
                     <div class="logo-icon">
                         <i class="fas fa-qrcode"></i>
                     </div>
-                    <div class="logo-text">QuickScan Pro</div>
+                    <div class="logo-text">DML-XMD PRO</div>
                 </div>
                 <div class="tagline">Enterprise-grade QR code scanning solution</div>
             </div>
@@ -485,7 +485,7 @@
             </div>
             
             <div class="instructions">
-                <h3><i class="fas fa-info-circle"></i> How to use QuickScan Pro:</h3>
+                <h3><i class="fas fa-info-circle"></i> How to use Dml-Xmd Pro:</h3>
                 <ol>
                     <li>Open your phone's camera or QR scanner app</li>
                     <li>Point your camera at the QR code above</li>
@@ -593,7 +593,7 @@
             
             // Help button functionality
             helpBtn.addEventListener('click', function() {
-                alert('QuickScan Pro Help:\n\n• Ensure good lighting when scanning\n• Hold your device steady for 2-3 seconds\n• Make sure the entire QR code is visible\n• If problems persist, try generating a new code\n\nFor enterprise support, contact: https://dml-contact.vercel.app');
+                alert('Dml-Xmd Pro Help:\n\n• Ensure good lighting when scanning\n• Hold your device steady for 2-3 seconds\n• Make sure the entire QR code is visible\n• If problems persist, try generating a new code\n\nFor enterprise support, contact: https://dml-contact.vercel.app');
             });
         });
 
