--- a/qr.html
+++ b/qr.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DML-XMD PRO | Advanced QR Code Reader</title>
+    <title>Njabulo Jb| AI QR</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -430,7 +430,7 @@
                     <div class="logo-icon">
                         <i class="fas fa-qrcode"></i>
                     </div>
-                    <div class="logo-text">DML-XMD PRO</div>
+                    <div class="logo-text">Njabulo Jb</div>
                 </div>
                 <div class="tagline">Enterprise-grade QR code scanning solution</div>
             </div>
