--- a/pair.html
+++ b/pair.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DML-MD Pairing Code</title>
+  <title>Njabulo Jb pair site</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     :root {
-      --gradient: linear-gradient(135deg, #00d4ff, #7e00ff);
+      --gradient: linear-gradient(135deg, #f5f7fa, #c3cfe2);
       --bg: #050010;
       --glass: rgba(255, 255, 255, 0.05);
       --text: #ffffff;
@@ -180,7 +180,7 @@
   <header class="header">
     <div class="logo-container">
       <img src="https://files.catbox.moe/vcdwmp.jpg" class="logo-img">
-      <div class="logo-text">DML-MD</div>
+      <div class="logo-text">Njabulo Jb</div>
     </div>
     <div class="battery-container">
       <i class="fas fa-battery-full battery-icon" id="battery-icon"></i>
@@ -190,9 +190,9 @@
 
   <!-- Pairing Code Card -->
   <div class="card">
-    <h2>PAIRING CODE</h2>
-    <h5>Best WhatsApp Bot made by DML</h5>
-    <p>Enter your number with country code:</p>
+    <h2>.</h2>
+    <h5>.</h5>
+    <p>Enter:</p>
 
     <div class="input-container">
       <input type="number" id="number" placeholder="2557********" required>
@@ -205,7 +205,7 @@
 
   <!-- Music Player -->
   <div class="music-player">
-    <div class="music-title">DML-MD</div>
+    <div class="music-title">Njabulo J </div>
     <div class="music-subtitle">Vibes</div>
     <button class="play-btn" onclick="togglePlay()">
       <i class="fas fa-pause" id="play-icon"></i>
@@ -246,7 +246,7 @@
       const code=data.code||"Unavailable";
       pairResult.innerHTML=`<p style="color:var(--highlight);font-weight:bold;">CODE: <span style="color:white">${code}</span></p>`;
       copyCodeBtn.style.display="inline-block"; waitingMessage.style.display="none";
-    }catch{ pairResult.innerHTML='<p style="color:#ff5555">Error getting code</p>'; waitingMessage.style.display="none"; }
+    }catch{ pairResult.innerHTML='<p style="color:#c3cfe2">Error getting code</p>'; waitingMessage.style.display="none"; }
   });
 
   // Music Player
